--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <!-- Logo Start -->
-                <a class="navbar-brand" href="index-video.html">
+                <a class="navbar-brand" href="{% url 'web:index' %}">
                     <img src="{% static 'images/logodev.png' %}" alt="Logo">
                 </a>
                 <!-- Logo End -->
@@ -17,16 +17,16 @@
                         <ul class="navbar-nav mr-auto" id="menu">
 
 
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                            <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="service.html">Works</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'web:index' %}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'web:about' %}">About Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'web:services' %}">Services</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'web:works' %}">Works</a></li>
+                            <!-- <li class="nav-item"><a class="nav-link" href="{% url 'web:contact' %}">Contact Us</a></li> -->
                         </ul>
                     </div>
                     <!-- Header Btn Start -->
                     <div class="header-btn d-inline-flex">
-                        <a href="contact.html" class="btn-default">Get a Quote</a>
+                        <a href="{% url 'web:contact' %}" class="btn-default">Get a Quote</a>
                     </div>
                     <!-- Header Btn End -->
                 </div>
