--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -21,6 +21,7 @@
                             <li class="nav-item"><a class="nav-link" href="{% url 'web:about' %}">About Us</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'web:services' %}">Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'web:works' %}">Works</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'web:works' %}">Careers</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="{% url 'web:contact' %}">Contact Us</a></li> -->
                         </ul>
                     </div>
