--- a/templates/web/services.html
+++ b/templates/web/services.html
@@ -10,12 +10,7 @@
                     <!-- Page Header Box Start -->
                     <div class="page-header-box">
                         <h1 class="wow fadeInUp">Our Services</h1>
-                        <nav class="wow fadeInUp" data-wow-delay="0.25s">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index-2.html">home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">services</li>
-                            </ol>
-                        </nav>
+                       
                     </div>
                     <!-- Page Header Box End -->
                 </div>
@@ -28,149 +23,34 @@
      <div class="page-service">
         <div class="container">
             <div class="row">
+
+                {% for service in services %}
                 <div class="col-lg-4 col-md-6">
                     <!-- Service Item Start -->
                     <div class="service-item page-service-item wow fadeInUp">
                         <div class="icon-box">
-                            <img src="images/icon-services-1.svg" alt="">
+                            <img src="{{ service.image.url }}" alt="">
                         </div>
 
                         <div class="service-category">
-                            <a href="#">Consulting</a>
+                            <a href="#">{{ service.catagory }}</a>
                         </div>
 
                         <div class="service-body">
                             <div class="service-content">
-                                <h3>optimization</h3>
-                                <p>Our services include SEO Optimization to enhance organic search visibility.</p>
+                                <h3>{{ service.title }}</h3>
+                                <p>{{ service.description }}</p>
                             </div>
                             <div class="service-btn">
-                                <a href="service-single.html" class="readmore-btn">read more</a>
+                                <a href="{% url 'web:service-single' service.id%}" class="readmore-btn">read more</a>
                             </div>
                         </div>                        
                     </div>
                     <!-- Service Item End -->
                 </div>
+                {% endfor %}
 
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item page-service-item wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="icon-box">
-                            <img src="images/icon-services-2.svg" alt="">
-                        </div>
-
-                        <div class="service-category">
-                            <a href="#">Online Advertising</a>
-                        </div>
-
-                        <div class="service-body">
-                            <div class="service-content">
-                                <h3>Pay-par Click</h3>
-                                <p>Pay-Per-Click (PPC) Advertising for targeted lead generation.</p>
-                            </div>
-                            <div class="service-btn">
-                                <a href="service-single.html" class="readmore-btn">read more</a>
-                            </div>
-                        </div>                        
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item page-service-item wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="icon-box">
-                            <img src="images/icon-services-3.svg" alt="">
-                        </div>
-
-                        <div class="service-category">
-                            <a href="#">SEO</a>
-                        </div>
-
-                        <div class="service-body">
-                            <div class="service-content">
-                                <h3>SEO optimiz</h3>
-                                <p>SEO Optimization service focuses on improving your website's visibility.</p>
-                            </div>
-                            <div class="service-btn">
-                                <a href="service-single.html" class="readmore-btn">read more</a>
-                            </div>
-                        </div>                        
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item page-service-item wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="icon-box">
-                            <img src="images/icon-services-4.svg" alt="">
-                        </div>
-
-                        <div class="service-category">
-                            <a href="#">IT Services</a>
-                        </div>
-
-                        <div class="service-body">
-                            <div class="service-content">
-                                <h3>development</h3>
-                                <p>We provide custom web development services tailored to business needs.</p>
-                            </div>
-                            <div class="service-btn">
-                                <a href="service-single.html" class="readmore-btn">read more</a>
-                            </div>
-                        </div>                        
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item page-service-item wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="icon-box">
-                            <img src="images/icon-services-5.svg" alt="">
-                        </div>
-
-                        <div class="service-category">
-                            <a href="#">E-commerce Solutions</a>
-                        </div>
-
-                        <div class="service-body">
-                            <div class="service-content">
-                                <h3>social marketing</h3>
-                                <p>Social Media Marketing services include strategy development.</p>
-                            </div>
-                            <div class="service-btn">
-                                <a href="service-single.html" class="readmore-btn">read more</a>
-                            </div>
-                        </div>                        
-                    </div>
-                    <!-- Service Item End -->
-                </div>
-
-                <div class="col-lg-4 col-md-6">
-                    <!-- Service Item Start -->
-                    <div class="service-item page-service-item wow fadeInUp" data-wow-delay="1s">
-                        <div class="icon-box">
-                            <img src="images/icon-services-6.svg" alt="">
-                        </div>
-
-                        <div class="service-category">
-                            <a href="#">Article</a>
-                        </div>
-
-                        <div class="service-body">
-                            <div class="service-content">
-                                <h3>content writing</h3>
-                                <p>We offer professional content writing services, creating high-quality.</p>
-                            </div>
-                            <div class="service-btn">
-                                <a href="service-single.html" class="readmore-btn">read more</a>
-                            </div>
-                        </div>                        
-                    </div>
-                    <!-- Service Item End -->
-                </div>
+               
             </div>
         </div>
      </div>
