--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -132,7 +132,8 @@
                             <h3 class="wow fadeInUp">Start your journey with us</h3>
                         </div>
                         <!-- Contact Form Start -->
-                        <form id="contactForm" action="#" method="POST" data-toggle="validator" class="wow fadeInUp" data-wow-delay="0.25s">
+                        <form action="#" method="POST" data-toggle="validator" class="wow fadeInUp" data-wow-delay="0.25s">
+                               {% csrf_token %}
                             <div class="row">
                                 <div class="form-group col-md-6 mb-4">
                                     <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
